--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/okp"
     android:layout_height="match_parent"
     tools:context=".ForgotPassword">
 
@@ -23,24 +24,26 @@
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.39"
+        app:layout_constraintVertical_bias="0.105"
         tools:visibility="visible" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/resetPassword"
-        android:layout_width="350dp"
-        android:layout_height="60dp"
-        android:background="#ED0B31F3"
-        android:backgroundTint="#E1BCBC"
+        android:layout_width="229dp"
+        android:layout_height="53dp"
+        android:background="@drawable/shapebutton"
+        android:backgroundTint="#ED0B31F3"
         android:onClick="@android:string/ok"
         android:text="Reset Password"
+        android:textColor="#F8F2F2"
+        android:textColorHint="#F6F3F3"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.491"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.557" />
+        app:layout_constraintVertical_bias="0.223" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
