--- a/app/src/main/res/layout/activity_help2.xml
+++ b/app/src/main/res/layout/activity_help2.xml
@@ -4,6 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+
+    android:background="#C1DDE1"
     android:fitsSystemWindows="true"
     tools:context=".HELP2">
 
@@ -34,9 +36,7 @@
         </com.google.android.material.appbar.CollapsingToolbarLayout>
     </com.google.android.material.appbar.AppBarLayout>
 
-    <include
-        layout="@layout/content_scrolling"
-        />
+    <include layout="@layout/content_scrolling" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/help_mail"
@@ -45,7 +45,7 @@
         android:layout_marginEnd="@dimen/fab_margin"
         app:layout_anchor="@id/app_bar"
         app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@android:drawable/ic_dialog_email"/>
+        app:srcCompat="@android:drawable/ic_dialog_email" />
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
