--- a/app/src/main/res/layout/activity_book_slot1.xml
+++ b/app/src/main/res/layout/activity_book_slot1.xml
@@ -2,142 +2,155 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/okp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="#9FC8C5"
+
+
     tools:context=".BookSlot1">
 
     <Button
         android:id="@+id/sector30"
-        android:layout_width="123dp"
-        android:layout_height="74dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-30"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.083"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.832" />
+        app:layout_constraintVertical_bias="0.906" />
 
     <Button
         android:id="@+id/sector7"
-        android:layout_width="139dp"
-        android:layout_height="73dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-7"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.761"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.832" />
+        app:layout_constraintVertical_bias="0.906" />
 
     <Button
         android:id="@+id/sector10"
-        android:layout_width="135dp"
-        android:layout_height="74dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-10"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.764"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.677" />
+        app:layout_constraintVertical_bias="0.734" />
 
     <Button
         android:id="@+id/sector21"
-        android:layout_width="131dp"
-        android:layout_height="70dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-21"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.767"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.515" />
+        app:layout_constraintVertical_bias="0.563" />
 
     <Button
         android:id="@+id/sector8"
-        android:layout_width="129dp"
-        android:layout_height="65dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-8"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.085"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.512" />
+        app:layout_constraintVertical_bias="0.563" />
 
     <Button
         android:id="@+id/sector14"
-        android:layout_width="131dp"
-        android:layout_height="69dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-14"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.057"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.672" />
+        app:layout_constraintVertical_bias="0.734" />
 
     <Button
         android:id="@+id/sector2"
-        android:layout_width="144dp"
-        android:layout_height="67dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-2"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.805"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.347" />
+        app:layout_constraintVertical_bias="0.39" />
 
     <Button
         android:id="@+id/sector16"
-        android:layout_width="152dp"
-        android:layout_height="72dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-16"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.061"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.185" />
+        app:layout_constraintVertical_bias="0.221" />
 
     <Button
         android:id="@+id/sector24"
-        android:layout_width="134dp"
-        android:layout_height="70dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-24"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.086"
+        app:layout_constraintHorizontal_bias="0.087"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.343" />
+        app:layout_constraintVertical_bias="0.39" />
 
     <Button
         android:id="@+id/sector20"
-        android:layout_width="156dp"
-        android:layout_height="72dp"
+        android:layout_width="170dp"
+        android:layout_height="80dp"
         android:text="SECTOR-20"
+        android:background="@drawable/shapebutton"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.827"
+        app:layout_constraintHorizontal_bias="0.883"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.185" />
+        app:layout_constraintVertical_bias="0.221" />
 
     <TextView
         android:id="@+id/textView"
-        android:layout_width="310dp"
-        android:layout_height="57dp"
-        android:text="SLOT BOOKING"
+        android:layout_width="323dp"
+        android:layout_height="70dp"
+        android:fontFamily="@font/capriola"
+        android:text="       SLOT BOOKING"
         android:textColor="#171515"
-        android:textSize="24sp"
+        android:textSize="30sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.58"
+        app:layout_constraintHorizontal_bias="0.415"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.046" />
+        app:layout_constraintVertical_bias="0.078" />
 </androidx.constraintlayout.widget.ConstraintLayout>
