--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,13 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1ECEC"
+    android:background="@drawable/okp"
+
     tools:context=".MainActivity">
 
     <EditText
         android:id="@+id/editTextTextEmailAddress"
-        android:layout_width="350dp"
-        android:layout_height="60dp"
+        android:layout_width="301dp"
+        android:layout_height="67dp"
         android:ems="10"
         android:hint="xyz@gmail.com"
         android:inputType="textEmailAddress"
@@ -21,16 +22,16 @@
         android:textColorLink="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.696"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.275"
+        app:layout_constraintVertical_bias="0.232"
         tools:visibility="visible" />
 
     <EditText
         android:id="@+id/editTextTextPassword"
-        android:layout_width="350dp"
-        android:layout_height="60dp"
+        android:layout_width="312dp"
+        android:layout_height="62dp"
         android:ems="10"
         android:hint="Your Password"
         android:inputType="textPassword"
@@ -40,76 +41,30 @@
         android:textColorLink="#000000"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.717"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.43" />
+        app:layout_constraintVertical_bias="0.372" />
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/login"
-        android:layout_width="350dp"
+        android:layout_width="281dp"
         android:layout_height="60dp"
-        android:background="#ED0B31F3"
-        android:backgroundTint="#E1BCBC"
+        android:background="@drawable/shapebutton"
+        android:backgroundTint="#112FDA"
         android:onClick="@android:string/ok"
         android:text="LOGIN"
+        android:textColor="#F1EEEE"
+        android:textColorHint="#FFEB3B"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.484"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.587" />
+        app:layout_constraintVertical_bias="0.499" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/register"
-        android:layout_width="350dp"
-        android:layout_height="60dp"
-        android:layout_marginTop="176dp"
-        android:background="#C96BFF00"
-        android:backgroundTint="#A97AF400"
-        android:drawableTint="#FDAEC5AC"
-        android:fallbackLineSpacing="false"
-        android:hapticFeedbackEnabled="false"
-        android:onClick="@android:string/ok"
-        android:shadowColor="#6A2E2E"
-        android:text="CREATE NEW ACCOUNT"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.508"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.925" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="300dp"
-        android:layout_height="100dp"
-        android:fontFamily="sans-serif-black"
-        android:text="Pay And Park"
-        android:textColor="#000000"
-        android:textSize="34sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.639"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.074" />
-
-    <TextView
-        android:id="@+id/forgotpassword"
-        android:layout_width="160dp"
-        android:layout_height="40dp"
-        android:text="Forgot Password?"
-        android:textAlignment="center"
-        android:textColor="#1D3CDC"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.533"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.732" />
-
-<!--    <ProgressBar-->
+    <!--    <ProgressBar-->
 <!--        android:id="@+id/progressBar"-->
 <!--        style="?android:attr/progressBarStyle"-->
 <!--        android:layout_width="160dp"-->
@@ -122,6 +77,57 @@
 <!--        app:layout_constraintTop_toTopOf="@+id/login"-->
 <!--        app:layout_constraintStart_toStartOf="parent"-->
 <!--        />-->
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/register"
+        android:layout_width="350dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="176dp"
+        android:background="@drawable/shapebutton"
+        android:backgroundTint="#112FDA"
+        android:drawableTint="#FDAEC5AC"
+        android:fallbackLineSpacing="false"
+        android:hapticFeedbackEnabled="false"
+        android:onClick="@android:string/ok"
+        android:shadowColor="#6A2E2E"
+        android:text="CREATE NEW ACCOUNT"
+        android:textColor="#EDE9E9"
+        android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.459"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.929" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="317dp"
+        android:layout_height="70dp"
+        android:fontFamily="@font/capriola"
+        android:text="Pay And Park"
+        android:textColor="#000000"
+        android:textSize="40sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.67"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.08" />
+
+    <TextView
+        android:id="@+id/forgotpassword"
+        android:layout_width="160dp"
+        android:layout_height="40dp"
+        android:text="Forgot Password?"
+        android:textAlignment="center"
+        android:textColor="#1D3CDC"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.88"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.589" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -137,5 +143,29 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.281" />
+
+    <ImageView
+        android:id="@+id/imageView4"
+        android:layout_width="39dp"
+        android:layout_height="47dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.079"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.375"
+        app:srcCompat="@drawable/password" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="62dp"
+        android:layout_height="59dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.043"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.24"
+        app:srcCompat="@drawable/email" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
