--- a/app/src/main/res/layout/activity_map_track_demo.xml
+++ b/app/src/main/res/layout/activity_map_track_demo.xml
@@ -6,6 +6,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/okp"
     android:orientation="vertical"
     android:padding="16dp"
     android:gravity="center_horizontal"
@@ -13,8 +14,8 @@
 
     <AutoCompleteTextView
         android:id="@+id/et_source"
-        android:layout_width="350dp"
-        android:layout_height="63dp"
+        android:layout_width="365dp"
+        android:layout_height="66dp"
         android:background="@android:drawable/editbox_background"
         android:hint="Enter Source Location"
         android:padding="12dp"
@@ -40,10 +41,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.063" />
+
     <AutoCompleteTextView
         android:id="@+id/et_Destination"
-        android:layout_width="350dp"
-        android:layout_height="65dp"
+        android:layout_width="367dp"
+        android:layout_height="66dp"
         android:layout_marginTop="8dp"
         android:background="@android:drawable/editbox_background"
         android:hint="Enter Destination location"
@@ -57,15 +59,15 @@
 
     <Button
         android:id="@+id/bt_track"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="290dp"
+        android:layout_height="69dp"
         android:layout_marginTop="16dp"
         android:text="display track"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.317" />
+        app:layout_constraintVertical_bias="0.267" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
