--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -10,6 +10,8 @@
 
     android:layout_height="match_parent"
 
+    android:background="@drawable/okp"
+
     android:orientation="vertical"
 
     tools:context=".MainActivity">
@@ -117,16 +119,18 @@
 
         android:id="@+id/idBtnMakePayment"
 
-        android:layout_width="match_parent"
+        android:layout_width="383dp"
 
-        android:layout_height="wrap_content"
+        android:layout_height="59dp"
 
         android:layout_below="@id/idEdtDescription"
 
-        android:layout_margin="12dp"
+        android:layout_marginStart="12dp"
 
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
+        android:layout_marginBottom="12dp"
         android:text="Make Payment"
-
         android:textAllCaps="false" />
 
 
